--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
    display: flex;
    justify-content: center;
    align-items: center;
+   background-color: rgba(20, 20, 20, 0.83);
 }
 #calculator {
    font-family: Arial, sans-serif;
@@ -19,14 +20,19 @@ body {
    width: 100%;
    padding: 20px;
    font-size: 5rem;
-   text-align: left;
+   text-align: right;
    border: none;
    background-color: rgb(25, 25, 25);
    color: rgb(255, 255, 255);
+   overflow: hidden;
+   overflow-x: auto;
+   white-space: nowrap;
+   box-sizing: border-box;
 }
 #keys {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
+   grid-template-rows: repeat(5, 1fr);
    gap: 10px;
    padding: 25px;
 }
@@ -49,7 +55,7 @@ button:hover {
 }
 button:active {
    background-color: rgb(128, 128, 128);
-   transform: scale(0.95);
+   transform: scale(0.98);
    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.15);
 }
 .operator-btn {
@@ -62,4 +68,58 @@ button:active {
 .operator-btn:active {
    background-color: rgb(255, 194, 102);
    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.15);
+}
+#erase-btn {
+   padding-right: 3px;
+   padding-bottom: 3px;
+}
+#erase-btn:hover,
+#clear-btn:hover,
+#erase-btn:active,
+#clear-btn:active {
+   background-color: rgb(255, 99, 71);
+}
+.functionality-btn {
+   background-color: rgb(156, 156, 163);
+}
+#zero-btn {
+   grid-column: span 2;
+   width: 100%;
+}
+/*Responsive*/
+@media (max-width: 520px) {
+   #display {
+      font-size: 3rem;
+      padding: 15px;
+   }
+
+   button {
+      width: 80px;
+      height: 80px;
+      font-size: 2rem;
+   }
+
+   #keys {
+      gap: 5px;
+      padding: 15px;
+      justify-items: center;
+   }
+}
+
+@media (max-width: 450px) {
+   #display {
+      font-size: 2.5rem;
+      padding: 10px;
+   }
+
+   button {
+      width: 70px;
+      height: 70px;
+      font-size: 1.8rem;
+   }
+
+   #keys {
+      gap: 5px;
+      padding: 10px;
+   }
 }
